tests/snapshots/note_test__editing_an_existing_daily_alters_the_same_file.snap
---
source: tests/note_test.rs
expression: note_contents
---
---
title = "2015-10-21"
created_at = 2015-10-21T07:28:00-07:00
---

today was a cool day
I have more to say!
