tests/snapshots/note_test__opening_two_notes_with_the_same_name_prevents_clobbering_even_if_collision_exists_on_disk.snap
---
source: tests/note_test.rs
expression: upd_note_contents
---
---
title = "my cool note"
created_at = 2015-10-21T07:28:00-07:00
---

oh no
