tests/snapshots/note_test__writes_dailies_to_notes_directory.snap
---
source: tests/note_test.rs
expression: note_contents
---
---
title = "2015-10-21"
created_at = 2015-10-21T07:28:00-07:00
---

today was a cool day
