tests/snapshots/note_test__writes_notes_to_notes_directory_even_if_inode_changes.snap
---
source: tests/note_test.rs
expression: note_contents
---
---
title = "my cool note"
created_at = 2015-10-21T07:28:00-07:00
---

hello, world!
